k8s-manifests/base/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: akhilthyadi/kube-auth:latest
          ports:
            - containerPort: 5000
